[CRD iOS] Prevent crash when failed to fetch host list

HostListFetcher returns a -1 error code when it fails to get the HTTP
response (because of timeout?). We map the HTTP code into error message
using net::GetHttpReasonPhrase(), which reaches NOTREACHED() when the
argument is -1 and causes a crash on debug build.

This CL prevents this by explicitly translating -1 into "Connection
failed".

Bug: 832994
Change-Id: I94f5c353de2674500190efb9dc8066ad40aaed8e
Reviewed-on: https://chromium-review.googlesource.com/1012787
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551181}
Former-commit-id: e3634cb492e52d944122012a9364d0b80d8fe0eb